Fix problem sitenav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -449,7 +449,7 @@ only screen and (                min-resolution: 2dppx) {
         position: absolute;
         display: block;
         left: 0;
-        top: -100%;
+        top: -200%;
         width: 100%;
         opacity: 0;
         transition: 0.3s;
